# scout

./: .gitignore  Cargo.toml  README.md
ast_walker/: Cargo.toml
ast_walker/src/: ast_visitor.rs  lib.rs
conf/: functions.txt  modules.txt  rules.ron
examples/files/: test-benign-code.py  test-multiple-imports.py  test-obfuscated-example.py  test-simple-functions-2.py  test-simple-functions.py  test-string-concat.py  test-system-call.py
scout/: Cargo.toml  config-example.json
scout/src/: config.jsonc  config.rs  lib.rs
scout/src/evaluator/: bulletin.rs  canary.json  canary.rs  density_evaluator.rs  evaluator.rs  evaluator_result.rs  hotspot.rs  mod.rs  rules.ron  rules.rs  source_analysis.rs
scout/src/package/: mod.rs
scout/src/source/: mod.rs  sourcefile.rs
scout/src/utils/: mod.rs
scout/src/visitors/: call_visitor.rs  import_visitor.rs  mod.rs  variable_visitor.rs
scripts/: plot.py
src/: ast_visitor.rs  checker.rs  main.rs  package.rs  sourcefile.rs  utils.rs
src/ast/: ast_visitor.rs
src/evaluator/: bulletin.rs  evaluator.rs  mod.rs  rules.rs
src/package/: mod.rs
src/source/: sourcefile.rs
src/visitors/: call_visitor.rs  import_visitor.rs  mod.rs
