[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# used to parsing the python abstract syntax tree (AST)
rustpython-parser = "0.1.2"

# CLI
clap = { version = "3.1.1", features = ["derive"] }
colored = { version = "2" }

# used for fixing parsing errors
regex = "1"

# serialization
ron = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# general logging
log = { version = "0.4.0", features = ["std"] }
pretty_env_logger = "0.4.0"

# filesystem traversal
walkdir = "2"
