[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace]
members = [
  "ast_walker",
  "scout",
  "tests",
]

[dependencies]
scout = { path = "./scout" }

# CLI
clap = { version = "3.1.1", features = ["derive"] }
# general logging
log = { version = "0.4.0", features = ["std"] }
pretty_env_logger = "0.4.0"
